--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>Card MatchR</title>
   <link rel="stylesheet" href="style.css">
@@ -192,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
